# rive-cpp

./: CMakeLists.txt
skia/recorder/: README.md  build.sh  run.sh
skia/recorder/src/: main.cpp
skia/renderer/src/: skia_renderer.cpp
src/animation/: keyframe_color.cpp
src/shapes/paint/: color_utils.cpp  linear_gradient.cpp  solid_color.cpp
test/: bound_bones_test.cpp
